# yahtz

./: .gitignore  README.md  pyproject.toml  rules.md
src/yahtz/: boxes.py  cliplayer.py  dicetypes.py  exceptions.py  game.py  montecarlo.py  player.py  scorecard.py  scorecheck.py
tests/: test_dicetypes.py  test_scorecard.py  test_scorecheck.py
