[project]
name = "yahtz"
version = "0.1.0"
description = "An engine for the game of Yahtzee."
readme = "README.md"
authors = [
    { name = "Roger Hurwitz", email = "rogerhurwitz@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "pytransitions>=0.9.2",
    "tabulate>=0.9.0",
]
keywords = ["yahtzee", "dice", "game"]  # help with discovery
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/rogerhurwitz/yahtz"
Repository = "https://github.com/rogerhurwitz/yahtz"
Issues = "https://github.com/rogerhurwitz/yahtz/issues"

[project.scripts]
yahtz = "yahtz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.135.11",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

 


